feat: Implement web app best practices for Blackjack game
Add professional features and improvements to blackjack-web:
- Create README.md with game instructions and deployment info
- Add accessibility improvements to UI elements
- Implement proper metadata and SEO optimizations
- Create custom 404 error page for better UX
- Add Azure Static Web App configuration
- Include proper file structure with .gitignore
- Improve script loading with defer attributes
- Add documentation to JavaScript files

--- a/blackjack-web/index.html
+++ b/blackjack-web/index.html
@@ -3,7 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blackjack</title>
+    <meta name="description" content="Play Blackjack online - a free web-based casino card game with betting, splitting, doubling down and more">
+    <meta name="keywords" content="blackjack, card game, casino game, 21, web game">
+    <meta name="author" content="Abernaughty">
+    <meta name="theme-color" content="#468C4E">
+    <title>Blackjack | Classic Casino Card Game</title>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="icon" type="image/x-icon" href="assets/images/favicon.ico">
 </head>
@@ -75,9 +79,9 @@
         </footer>
     </div>
 
-    <!-- Scripts -->
-    <script src="js/storage.js"></script>
-    <script src="js/ui.js"></script>
-    <script src="js/blackjack.js"></script>
+    <!-- Scripts - Using defer for better performance -->
+    <script src="js/storage.js" defer></script>
+    <script src="js/ui.js" defer></script>
+    <script src="js/blackjack.js" defer></script>
 </body>
 </html>
