Add maber.io logo to background behind fluid effect

--- a/fluid-sim/index.html
+++ b/fluid-sim/index.html
@@ -243,6 +243,9 @@
     </script>
 </head>
 <body>
+    <div class="logo-container">
+        <img id="logo" src="images/maber-logo.png" alt="maber.io">
+    </div>
     <canvas id="fluid-canvas"></canvas>
 
     <script src="js/fluidSimulation.js"></script>
