Add header bar with bear icon, maber.io logo, and Portfolio link

--- a/fluid-sim/index.html
+++ b/fluid-sim/index.html
@@ -243,6 +243,17 @@
     </script>
 </head>
 <body>
+    <header class="header">
+        <div class="header-left">
+            <img src="images/bear-icon.png" alt="Bear Icon" class="header-icon">
+            <img src="images/maber-logo.png" alt="maber.io" class="header-logo">
+        </div>
+        <div class="header-right">
+            <a href="https://dev.maber.io" class="portfolio-link" target="_blank">
+                <img src="images/Portfolio.png" alt="Portfolio" class="header-portfolio">
+            </a>
+        </div>
+    </header>
     <div class="logo-container">
         <img id="logo" src="images/maber-logo.png" alt="maber.io">
     </div>
