Add navigation links for Blackjack, PokeData, and Portfolio with updated images

--- a/fluid-sim/index.html
+++ b/fluid-sim/index.html
@@ -249,6 +249,12 @@
             <img src="images/maber-logo.png" alt="maber.io" class="header-logo">
         </div>
         <div class="header-right">
+            <a href="https://blackjack.maber.io" class="nav-link" target="_blank">
+                <img src="images/Blackjack.png" alt="Blackjack" class="header-nav-img">
+            </a>
+            <a href="https://pokedata.maber.io" class="nav-link" target="_blank">
+                <img src="images/PokeData.png" alt="PokeData" class="header-nav-img">
+            </a>
             <a href="https://dev.maber.io" class="portfolio-link" target="_blank">
                 <img src="images/Portfolio.png" alt="Portfolio" class="header-portfolio">
             </a>
