--- a/fluid-sim/index.html
+++ b/fluid-sim/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fluid Simulation</title>
+    <title>maber.io</title>
     <link rel="icon" href="images/bear-icon.png" type="image/png">
     <link rel="stylesheet" href="style.css?v=1.1">
     
