Added additional build debugging.

--- a/PokeData/public/index.html
+++ b/PokeData/public/index.html
@@ -51,6 +51,13 @@
   </script>
 
   <script type="module" src='./build/main.js'></script>
+  
+  <!-- API Debugging Tool (commented out by default) -->
+  <!-- To use: Uncomment the script tag below or run the following in browser console:
+       fetch('/debug-api.js').then(r => r.text()).then(t => eval(t))
+       Then call: debugApiCredentials()
+  -->
+  <!-- <script src='./debug-api.js'></script> -->
 </head>
 
 <body>
