--- a/PokeData/public/index.html
+++ b/PokeData/public/index.html
@@ -11,6 +11,24 @@
   <link rel='stylesheet' href='./build/bundle.css'>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
 
+  <!-- Prevent LiveReload on production -->
+  <script>
+    (function() {
+      // Check if we're on the production domain
+      if (window.location.hostname === 'pokedata.maber.io') {
+        // Override WebSocket to prevent livereload connections
+        window.WebSocket = function(url, protocols) {
+          if (url && url.indexOf('livereload') > -1) {
+            console.log('LiveReload connection blocked in production');
+            return {};
+          }
+          return new window.OriginalWebSocket(url, protocols);
+        };
+        window.OriginalWebSocket = window.WebSocket;
+      }
+    })();
+  </script>
+  
   <!-- Database reset script -->
   <script>
     // Delete any existing database before loading the app
